--- a/youtube_backend/docker-compose.yml
+++ b/youtube_backend/docker-compose.yml
@@ -1,106 +1,37 @@
 version: '3.8'
 
 services:
-  backend:
-    build:
-      context: .
-    container_name: youtube_clone_backend
-    command: ['sh', '-c', 'npx prisma db push && yarn start:prod']
-    ports:
-      - '${PORT}:${PORT}'
-    env_file:
-      - .env
+  db:
+    image: postgres:15
+    container_name: pg
     environment:
-      - DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:5432/${DATABASE_DB}
-      - REDIS_HOST=redis
-    volumes:
-      - uploads_data:/app/uploads
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_started
-    restart: unless-stopped
-    healthcheck:
-      test:
-        [
-          'CMD',
-          'node',
-          '-e',
-          'http.get("http://localhost:${PORT}/health", (res) => process.exit(res.statusCode === 200 ? 0 : 1)).on("error", () => process.exit(1))',
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
-
-  postgres:
-    image: postgres:17.5
-    container_name: youtube_clone_postgres
-    restart: unless-stopped
-    environment:
-      - POSTGRES_USER=${DATABASE_USER}
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_DB=${DATABASE_DB}
-    env_file:
-      - .env
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 6
+      POSTGRES_DB: youtube
     ports:
       - '5432:5432'
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres -d postgres']
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
 
-  redis:
-    image: redis:7-alpine
-    container_name: youtube_clone_redis
-    restart: unless-stopped
+  api:
+    build:
+      context: .
+    container_name: nest-api
     ports:
-      - '${REDIS_PORT}:6379'
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
-      interval: 10s
-      timeout: 3s
-      retries: 3
+      - '4000:4000'
+    restart: always
+    environment:
+      DATABASE_URL: postgres://postgres:6@db:5432/youtube
+    depends_on:
+      - db
 
   nginx:
-    image: nginx:alpine
-    container_name: youtube_clone_nginx
-    restart: unless-stopped
+    image: nginx:latest
+    container_name: nginx-proxy
     ports:
       - '80:80'
       - '443:443'
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - uploads_data:/app/uploads:ro
-      - ~/certs:/etc/nginx/certs:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./certs:/etc/nginx/certs:ro
+      - ./uploads:/app/uploads:ro
     depends_on:
-      backend:
-        condition: service_healthy
-    healthcheck:
-      test:
-        [
-          'CMD',
-          'wget',
-          '--no-verbose',
-          '--tries=1',
-          '--spider',
-          'http://localhost/health',
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-volumes:
-  pgdata:
-    driver: local
-  redis_data:
-    driver: local
-  uploads_data:
-    driver: local
+      - api
