--- a/youtube_backend/dockerfile
+++ b/youtube_backend/dockerfile
@@ -1,9 +1,17 @@
 FROM node:22-alpine
+
 WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile && yarn cache clean
+
+COPY package*.json yarn.lock ./
+
+COPY prisma ./prisma
+
+RUN yarn install --frozen-lockfile && yarn cache clean && npx prisma generate
+
 COPY . .
-RUN npx prisma generate
+
 RUN yarn build
-RUN yarn install --frozen-lockfile --production && yarn cache clean
+
 EXPOSE 4000
+
+CMD [ "yarn", "start:prod" ]
