--- a/youtube_backend/package.json
+++ b/youtube_backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "13-dars",
+  "name": "youtube",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,16 +25,17 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
-    "@prisma/client": "^6.9.0",
+    "@prisma/client": "6.9.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.9",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/multer": "^1.4.13",
-    "@types/otp-generator": "^4.0.2",
-    "axios": "^1.9.0",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -42,14 +43,13 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "ioredis": "^5.6.1",
-    "multer": "^2.0.1",
-    "nestjs-resend": "^1.0.1",
+    "nestjs-resend": "^1.0.3",
     "otp-generator": "^4.0.1",
-    "prisma": "^6.9.0",
-    "redis": "^5.5.6",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "uuid": "^11.1.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -69,6 +69,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "prisma": "6.9.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
