--- a/youtube_backend/nginx/default.conf
+++ b/youtube_backend/nginx/default.conf
@@ -1,31 +1,29 @@
 server {
     listen 443 ssl;
-    server_name 13.60.180.177;
-
-    ssl_certificate     /etc/nginx/certs/localhost.pem;
-    ssl_certificate_key /etc/nginx/certs/localhost-key.pem;
-
+    server_name localhost;
+    
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+    
+    client_max_body_size 1G;
+    
+    location /health {
+        return 200 'OK';
+        add_header Content-Type text/plain;
+    }
+    
     location /api/ {
-        proxy_pass http://13.60.180.177:4000/;
+        proxy_pass http://backend:4000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
-
+    
     location /uploads/ {
         alias /app/uploads/;
     }
-
+    
     location / {
-        return 200 'HTTPS via mkcert is working\n';
+        return 200 'Working\n';
         add_header Content-Type text/plain;
-    }
-}
-
-server {
-    listen 80;
-    server_name 13.60.180.177;
-
-    location / {
-        return 301 https://$host$request_uri;
     }
 }
