--- a/youtube_frontend/.env.development
+++ b/youtube_frontend/.env.development
@@ -1,1 +1,2 @@
-VITE_API_BACKEND_URL=http://localhost:4000/api
+VITE_API_BACKEND_URL=http://192.168.35.44:4000/api
+VITE_BASE_URL=http://192.168.35.44:4000
